--- a/requirements.txt
+++ b/requirements.txt
@@ -2,7 +2,11 @@ asgiref==3.8.1
 Django==5.1.7
 djangorestframework==3.15.2
 gunicorn==23.0.0
+iniconfig==2.0.0
 packaging==24.2
 pillow==11.1.0
+pluggy==1.5.0
+pytest==8.3.5
+pytest-django==4.10.0
 sqlparse==0.5.3
 whitenoise==6.9.0
